Fix envelope and add info to popup

--- a/popup.html
+++ b/popup.html
@@ -9,6 +9,10 @@
             <text x="0" y="39" fill="#000000" font-size="5px" font-weight="bold" font-family="'Helvetica Neue', Helvetica, Arial-Unicode, Arial, Sans-serif">Created by Hare Krishna</text>
             <text x="0" y="44" fill="#000000" font-size="5px" font-weight="bold" font-family="'Helvetica Neue', Helvetica, Arial-Unicode, Arial, Sans-serif">from the Noun Project</text>
         </svg>
+        <div>
+            <p>Average Loudness (LUFS): </p><p id="average-loudness"></p>
+            <p>Current Gain: </p><p id="current-gain"></p>
+        </div>
         <script src="popup.js"></script>
     </body>
 </html>
